# lss

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: ci.yml  release.yml
rules/: default_rules.txt
src/: lib.rs  main.rs  rules.rs
tests/: entropy_tests.rs
