[package]
name = "lss"
version = "0.1.0"
edition = "2021"
authors = ["you <you@example.com>"]
license = "MIT"
description = "Local Secret Scanner (lss) - scan local files and git history for potential secrets"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.3"
rayon = "1.8"
git2 = "0.17"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
hex = "0.4"
toml = "0.7"
dirs-next = "2.0"

[dev-dependencies]
tempfile = "3.6"